[project]
name = "bd-inflation-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Deepta", email = "deeptoadhikary@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "fastexcel>=0.19.0",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "polars>=1.39.2",
    "psycopg[binary]>=3.3.3",
    "sqlalchemy>=2.0.48",
    "streamlit>=1.55.0",
    "torchvision>=0.25.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
initdb = "bd_inflation_monitor:initdb"
deletedb = "bd_inflation_monitor:deletedb"
updatedb = "bd_inflation_monitor:updatedb"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
