[project]
name = "bd-inflation-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Deepta", email = "deeptoadhikary@gmail.com" }]
requires-python = ">=3.14"
dependencies = ["pydantic-settings"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
initdb = "bd_inflation_monitor:initdb"
deletedb = "bd_inflation_monitor:deletedb"
datapull = "bd_inflation_monitor:datapull"
updatedb = "bd_inflation_monitor:updatedb"

[project.optional-dependencies]
etl = [
    "beautifulsoup4>=4.14.3",
    "certifi>=2026.2.25",
    "fastexcel>=0.19.0",
    "httpx>=0.28.1",
    "polars>=1.39.3",
    "psycopg[binary]>=3.3.3",
]
dashboard = ["pandas>=2.3.3", "plotly>=6.6.0", "streamlit>=1.55.0"]
api = [
    "fastapi[standard]>=0.135.2",
    "psycopg[binary]>=3.3.3",
    "sqlalchemy>=2.0.48",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
